--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello World</title>
+    <title>Front Page</title>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
 </head>
 <body>
 
-{% for item in lst %}
 
-<b>{{item}}</b>
-{% endfor %}
+<!--word list-->
+<div class="container">
 
+    <div class="header">
+            <ul class="nav nav-pills pull-right">
+              <li class="active"><a href="/index">Home</a></li>
+              <li><a href="/add">Insert</a></li>
+            </ul>
+            <h3 class="text-muted">Word List</h3>
+    </div>
+
+
+
+    {% for date in issueDates %}
+
+        <h3>{{ date }}</h3>
+        {% for article in content[date] %}
+            <!--<div class="panel panel-default">-->
+                <div class="panel-heading">
+                    <h3><span class="label label-info">{{ article.pageNumber }}</span>
+                    <span class="label label-success">{{ article.passageTitle }}</span></h3>
+
+
+                </div>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>English</th>
+                        <th>Phonetic</th>
+                        <th>Chinese</th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+                        {% for i in range(article.englishWords|length) %}
+                          <tr>
+                            <td>{{ i }}</td>
+                            <td>{{ article.englishWords[i] }}</td>
+                            <td>{{ article.phonetics[i] }}</td>
+                            <td>{{ article.chineseWords[i] }}</td>
+                          </tr>
+                        {% endfor %}
+                    </tbody>
+
+                </table>
+            <!--</div>-->
+
+
+        {% endfor %}
+    {% endfor %}
+
+</div>
 </body>
 </html>
